# 4Ever

./: .dockerignore  .gitignore  README.md  README_EN.md  TOKEN_UI_REFACTOR.md  deploy.sh
backend/: .env.example  README.md  go.mod  go.sum  requirements.txt  run.go  run.py
backend/app/: __init__.py  main.py
backend/tests/: test_agents.py
deploy/: .env.example  Caddyfile  docker-compose.yml  redeploy.sh
docs/: agent-mcp-workflow.md  ai-workflow-assistant.md  chat-add-menu.md  chat-backendization-readiness.md  fetch-all-models.md  inspiration-canvas.md  lambchat-research-report.md  token-usage-tokenarena-delta-analysis.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: AIWorkflowAssistant.tsx  AdminPanel.tsx  App.tsx  App.vue  ChatPanel.tsx  ImageGenerationPanel.tsx  InspirationCanvasPanel.tsx  InspirationPanel.tsx  MemoryMapPanel.tsx  ModelHubPanel.tsx  NotesPanel.tsx  ProfilePanel.tsx  TokenUsagePanel.tsx  main.ts  (+1 more)
python_backend/: .env.example  Dockerfile  README.md  pyproject.toml
python_backend/app/: admin.py  auth.py  config.py  database.py  direct_chat.py  images.py  main.py  maps.py  modules.py  providers.py  runtime_smoke.py  secret_store.py  token_usage.py
python_backend/app/agents/: catalog.py  mcp.py  runner.py
python_backend/scripts/: ai_runtime_smoke.py
python_backend/tests/: test_agents.py  test_backend_contracts.py  test_providers.py  test_runtime_smoke.py
token-usage-cli/: PUBLISH_GUIDE.md  README.md  SERVICE_IMPLEMENTATION.md  USER_GUIDE.md  package.json
(+80 files in other folders)
