[project]
name = "four-ever-python-backend"
version = "0.1.0"
description = "Python backend for 4Ever with LangGraph-powered Agent workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.60",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
